--- a/s_cdp.yaml
+++ b/s_cdp.yaml
@@ -14,7 +14,7 @@
         - show cdp neighbors
      register: cdp
      
-   - name: save output to config/cdp.txt
+   - name: save output to config/s_cdp.txt
      copy:
       content: "{{cdp.stdout[0]}}"
-      dest: "config/cdp.txt"
+      dest: "config/s_cdp.txt"
